PCHR-2016: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
@@ -32,7 +32,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="pattern in workpatterns.customWorkpattern">
+    <tr ng-repeat="pattern in workpatterns.customWorkPatterns">
       <td>{{pattern.workPattern.label}} - {{pattern.workPattern.description}}</td>
       <td>{{pattern.effective_date}}</td>
       <td>{{pattern.change_reason_label}}</td>
