PCHR-2004: Add delete action by default, remove if user is not admin

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-report.html
@@ -214,7 +214,7 @@
                                   <i class="fa fa-ellipsis-v"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                                  <li ng-repeat="action in report.actionsFor(request)"
+                                  <li ng-repeat="action in ::report.actionsFor(request)"
                                     ng-switch="['edit', 'respond', 'view'].indexOf(action) > -1">
                                     <a href
                                       ng-switch-when="true"
@@ -387,7 +387,7 @@
                                 <i class="fa fa-ellipsis-v"></i>
                               </a>
                               <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                                <li ng-repeat="action in report.actionsFor(request)"
+                                <li ng-repeat="action in ::report.actionsFor(request)"
                                   ng-switch="['edit', 'respond', 'view'].indexOf(action) > -1">
                                   <a href
                                     ng-switch-when="true"
@@ -487,7 +487,7 @@
                                 <i class="fa fa-ellipsis-v"></i>
                               </a>
                               <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                                <li ng-repeat="action in report.actionsFor(request)"
+                                <li ng-repeat="action in ::report.actionsFor(request)"
                                   ng-switch="['edit', 'respond', 'view'].indexOf(action) > -1">
                                   <a href
                                     ng-switch-when="true"
