PCHR-2028: Delete Leave Requests

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
@@ -24,6 +24,11 @@ $row-margin-bottom: 15px;
   margin: 0;
 }
 
+.chr_leave-request-modal__delete {
+  margin-left: 15px;
+  margin-top: 8px;
+}
+
 .chr_leave-request-modal__form {
 
   .ui-select-container {
