--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -22,7 +22,7 @@
       active="active"
       type="pills"
       custom-header-class="nav-pills-horizontal nav-pills-horizontal-default">
-      <uib-tab heading="Report" data-tabname="report">>
+      <uib-tab heading="Report" data-tabname="report">
         <staff-leave-report ng-if="active === 0" contact-id="$root.settings.contactId"></staff-leave-report>
       </uib-tab>
       <uib-tab heading="Calendar" data-tabname="calendar">
