PCHR-2004: Ensure report table heading has a border

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-report.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-report.scss
@@ -14,6 +14,7 @@
 
 
 .chr_leave-report__heading {
+  border-bottom: 1px solid $crm-dark-grayblue;
 
   .chr_leave-report__export-button {
     line-height: 2.4;
