PCHR-2004: Enforce size of dropdown button

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-report.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-report.scss
@@ -1,3 +1,10 @@
+.chr_leave-report {
+
+  .dropdown-toggle {
+    padding: 0 10px;
+  }
+}
+
 .chr_leave-report__label {
   color: $gray-darker;
   font-weight: 700;
