--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-calendar-month.html
@@ -33,6 +33,7 @@
             <a ng-if="day.leaveRequest"
                user-role="{{$root.role}}"
                contact-id="calendar.contactId"
+               selected-contact-id="$root.settings.contactId"
                leave-request-popup
                leave-request="day.leaveRequest"
                title="Click to open this leave request">
