--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -1,11 +1,11 @@
-<div class="absence-tab-page crm-container">
+<div class="absence-tab-page">
   <div class="container">
     <div class="btn-group">
       <button 
         type="button" 
         class="btn btn-info" 
         leave-request-popup leave-type="leave" 
-        contact-id="absence.adminId" 
+        contact-id="absence.contactId" 
         user-role="{{$root.role}}" 
         selected-contact-id="$root.settings.contactId">Record New Absence
       </button>
@@ -20,7 +20,7 @@
         <li>
           <a
             leave-request-popup user-role="{{$root.role}}"
-            contact-id="adminId" leave-type="sickness"
+            contact-id="contactId" leave-type="sickness"
             selected-contact-id="$root.settings.contactId"
             href="#">Record Sickness
           </a>
@@ -28,7 +28,7 @@
         <li>
           <a
             leave-request-popup user-role="{{$root.role}}"
-            contact-id="adminId" leave-type="toil"
+            contact-id="contactId" leave-type="toil"
             selected-contact-id="$root.settings.contactId"
             href="#">Record Overtime
           </a>
