--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/toil.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/toil.html
@@ -5,7 +5,7 @@
       <div class="col-xs-4 chr_leave-request-modal__input-shift-left">
         <div class="crm_custom-select crm_custom-select--full">
           <select name="hours" ng-model="$ctrl.request.toilDurationHours"
-            ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isMode('create'))"
+            ng-disabled="$ctrl.isMode('view') || ($ctrl.canManage && !$ctrl.isMode('create'))"
             ng-change="$ctrl.request.updateDuration()">
             <option value="0" selected="selected">Hours</option>
             <option value="1">1h</option>
@@ -28,7 +28,7 @@
         <div class="crm_custom-select crm_custom-select--full">
           <select name="minutes" ng-model="$ctrl.request.toilDurationMinutes"
             ng-change="$ctrl.request.updateDuration()"
-            ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isMode('create'))">
+            ng-disabled="$ctrl.isMode('view') || ($ctrl.canManage && !$ctrl.isMode('create'))">
             <option value="0">Mins</option>
             <option value="5">5m</option>
             <option value="10">10m</option>
