PCHR-2004: Fix color and hover bg of dropdown button

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-report.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-report.scss
@@ -1,7 +1,12 @@
 .chr_leave-report {
 
   .dropdown-toggle {
+    color: $gray-darker;
     padding: 0 10px;
+
+    &:hover {
+      background: #e6e6e6;
+    }
   }
 }
 
