--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
@@ -7,3 +7,10 @@
   @import "components/*";
   @import "pages/*";
 }
+
+// The bootstrap dropdown is attached to the <body> outside of the #bootstrap-theme
+// namespace. Hence unfortunately the styles for the dropdowns need
+// to be available of the namespace as well
+@import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/mixins/ALL";
+@import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/_dropdowns.scss";
+@import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/overrides/style/_dropdowns.scss";
