PCHR-2025: Improve UX of datepickers in popup

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -162,6 +162,7 @@
                           datepicker-options="$ctrl.uiOptions.date.expiry.options"
                           show-button-bar="false"
                           ng-model="$ctrl.uiOptions.expiryDate"
+                          ng-click="$ctrl.uiOptions.date.expiry.show = true"
                           ng-change="$ctrl.updateExpiryDate()"
                           is-open="$ctrl.uiOptions.date.expiry.show"/>
                         <span
