--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
@@ -129,4 +129,11 @@ $row-margin-bottom: 15px;
   .alert {
     margin-bottom: 0 !important;
   }
+
+  input[uib-datepicker-popup] {
+    box-shadow: none !important;
+    background-color: inherit !important;
+    color: inherit !important;
+    cursor: pointer !important;
+  }
 }
