PCHR-2030: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-dashboard-page.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-dashboard-page.scss
@@ -11,26 +11,23 @@
 }
 
 .admin-dashboard-page {
-  .panel-heading {
-    background-color: $crm-page-topbar-bg;
-    color: $crm-white;
+  .crm_page__topbar {
     height: 65px;
 
     .dropdown-toggle {
-      background-color: transparent !important;
-      border-color: $crm-white !important;
-      color: $crm-white !important;
+     margin: 15px 30px 0 0 !important;
+
+      +ul {
+        margin-right: 30px !important;
+      }
     }
   }
 
   .chr_admin-dashboard_side-nav {
-    max-width: 260px;
+    overflow: hidden;
 
-    li.active {
-      a {
-        background: $crm-background !important;
-        color: $brand-primary !important;
-      }
+    ul {
+      max-width: 230px;
     }
   }
 }
