--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-dashboard-page.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-dashboard-page.scss
@@ -1,3 +1,5 @@
+$chr-admin-dashboard-side-nav-width: 230px;
+
 .page-civicrm-leaveandabsences-dashboard {
   h1.page-title,
   #branding {
@@ -27,7 +29,11 @@
     overflow: hidden;
 
     ul {
-      max-width: 230px;
+      max-width: $chr-admin-dashboard-side-nav-width;
     }
+  }
+
+  .chr_admin-dashboard_content {
+    width: calc(100% - #{$chr-admin-dashboard-side-nav-width});
   }
 }
