--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
@@ -1,4 +1,4 @@
-<div id="bootstrap-theme" class="admin-dashboard-page">
+<div class="admin-dashboard-page">
   <div class="crm_page__topbar">
     <div class="btn-group pull-right">
       <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown">
@@ -23,3 +23,4 @@
     </ul>
   </div>
 </div>
+<div class="clear"></div>
