--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-comments-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-comments-tab.html
@@ -1,23 +1,23 @@
 <div
   class="text-center chr_leave-request-modal__comments_empty"
-  ng-show="$ctrl.getActiveComments().length === 0">
+  ng-show="commentsCtrl.getActiveComments().length === 0">
   No comments available. Comments can be added below.
 </div>
 <div
   class="chr_leave-request-modal__comments"
-  ng-hide="$ctrl.getActiveComments().length === 0">
+  ng-hide="commentsCtrl.getActiveComments().length === 0">
   <div
     class="chr_leave-request-comment"
-    ng-repeat="comment in $ctrl.getActiveComments() | orderBy: $ctrl.orderComment : true">
+    ng-repeat="comment in commentsCtrl.getActiveComments() | orderBy: commentsCtrl.orderComment : true">
     <div class="chr_leave-request-comment__meta">
-      <span class="chr_leave-request-comment__author">{{$ctrl.getCommentorName(comment.contact_id)}}</span>
+      <span class="chr_leave-request-comment__author">{{commentsCtrl.getCommentorName(comment.contact_id)}}</span>
       <span>-</span>
-      <span class="chr_leave-request-comment__date">{{$ctrl.formatDateTime(comment.created_at)}}</span>
+      <span class="chr_leave-request-comment__date">{{commentsCtrl.formatDateTime(comment.created_at)}}</span>
       <button
         class="btn btn-link"
-        ng-disabled="$ctrl.isMode('view')"
-        ng-click="$ctrl.request.deleteComment(comment)"
-        ng-show="$ctrl.removeCommentVisibility(comment)">Remove
+        ng-disabled="commentsCtrl.isMode('view')"
+        ng-click="commentsCtrl.request.deleteComment(comment)"
+        ng-show="commentsCtrl.removeCommentVisibility(comment)">Remove
       </button>
     </div>
     <div class="chr_leave-request-comment__text" ng-bind-html="comment.text"></div>
@@ -27,15 +27,15 @@
   class="chr_wysiwyg"
   text-angular
   prevent-animations
-  ta-disabled="$ctrl.isMode('view')"
+  ta-disabled="commentsCtrl.isMode('view')"
   ta-toolbar="[['bold','italics','underline']]"
-  ng-model="$ctrl.comment.text"></div>
+  ng-model="commentsCtrl.comment.text"></div>
 <div class="chr_wysiwyg__action">
   <hr/>
   <button
     class="btn btn-link"
-    ng-click="$ctrl.addComment()"
-    ng-disabled="$ctrl.comment.text.length === 0 || $ctrl.isMode('view')">
+    ng-click="commentsCtrl.addComment()"
+    ng-disabled="commentsCtrl.comment.text.length === 0 || commentsCtrl.isMode('view')">
     <i class="fa fa-comment-o" aria-hidden="true"></i>
     Add comment
   </button>
